add:確認ダイアログのモーダル追加

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,7 @@
       >
     </noscript>
     <div id="app"></div>
+    <div id="teleport-target"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
